--- a/README.Rmd
+++ b/README.Rmd
@@ -16,35 +16,35 @@ knitr::opts_chunk$set(
 )
 ```
 
-# pygt3x
+# pycwa
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.com/muschellij2/pygt3x.svg?branch=master)](https://travis-ci.com/muschellij2/pygt3x)
-[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/muschellij2/pygt3x?branch=master&svg=true)](https://ci.appveyor.com/project/muschellij2/pygt3x)
+[![Travis build status](https://travis-ci.com/muschellij2/pycwa.svg?branch=master)](https://travis-ci.com/muschellij2/pycwa)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/muschellij2/pycwa?branch=master&svg=true)](https://ci.appveyor.com/project/muschellij2/pycwa)
 <!-- badges: end -->
 
-The goal of pygt3x is to ...
+The goal of pycwa is to ...
 
 ## Installation
 
-You can install the released version of pygt3x from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of pycwa from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("pygt3x")
+install.packages("pycwa")
 ```
 
 And the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("muschellij2/pygt3x")
+devtools::install_github("muschellij2/pycwa")
 ```
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(pygt3x)
+library(pycwa)
 ## basic example code
 ```
 
